Fri May 29 11:27:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/ZIOP/TestCompressor/TAO_TestCompressor.rc:
          Fixed for WinCE GCC

Fri May 29 10:29:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3683_Regression/*:
          New regression test

Thu May 28 14:56:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_3673_Regression/client.cpp:
          Print the iteration count when we get an exception

Thu May 28 14:12:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_3673_Regression/client.cpp:
          Field id of name 0 has to be set

Thu May 28 07:32:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Notify_Service/Notify_Service.cpp:
          Fix a bug when unregistering from the naming service

Wed May 27 18:10:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
        * TAO_IDL/tao_idl.cpp:
          Unicode fixes

        * tao/PortableServer/Root_POA.h:
          Layout changes

Wed May 27 18:03:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Notify_Service/Notify_Service.h:
          Fixed compile error with OpenVMS

Wed May 27 11:58:05 UTC 2009  Carlos O'Ryan  <coryan@glamdring>

        * tests/Bug_3647_Regression/client.cpp:
          I guess not all compilers know that 'and' is a keyword in C++.

        * tests/Bug_3647_Regression/Middle_Impl.cpp:
          Make sure I use the exceptions caught in this program, at least
          for debugging output.  Eliminates warnings for VC8

Wed May 27 03:00:37 UTC 2009  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/Bug_3647_Regression/client.cpp:
        * tests/Bug_3647_Regression/middle_server.cpp:
        * tests/Bug_3647_Regression/backend_server.cpp:
          Fixed Unicode build problems.

Tue May 26 17:09:00 UTC 2009  Carlos O'Ryan  <coryan@atdesk.com>

        * tao/Transport.h: