@@ -1,3 +1,8 @@
+Fri May 29 12:47:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/Transport.cpp (schedule_output):
+          Log an error when the reactor is zero
+
 Fri May 29 11:27:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/ZIOP/TestCompressor/TAO_TestCompressor.rc:
